ну нахуй эти самоделки, решил перевести проект на свой старый движок.