@@ -1,59 +1,42 @@
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'java'
-    id 'application'
-    id 'org.beryx.runtime' version '1.12.7'
-    id "com.github.johnrengelman.shadow" version "7.1.2"
+    id "org.beryx.jlink" version "2.24.4"
+    id "org.openjfx.javafxplugin" version "0.0.9"
+    id "application"
 }
 
-
-ext {
-    javafxVersion = '15'
-    platformModifier = 'win'
-}
 application {
-    mainClass = "com.github.lkapitman.App"
-    applicationName = 'OCSLauncher'
+    mainModule = "app"
+    mainClass = "com.github.lkapitman.starter.Starter"
 }
 
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-}
-
-compileJava.options.encoding = "UTF-8"
-compileTestJava.options.encoding = "UTF-8"
-javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    // testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'com.jfoenix:jfoenix:9.0.10'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    implementation(
-            "org.openjfx:javafx-base:${javafxVersion}:${platformModifier}",
-            "org.openjfx:javafx-controls:${javafxVersion}:${platformModifier}",
-            "org.openjfx:javafx-graphics:${javafxVersion}:${platformModifier}",
-            "org.openjfx:javafx-fxml:${javafxVersion}:${platformModifier}",
-            "org.openjfx:javafx-swing:${javafxVersion}:${platformModifier}",
-            "org.openjfx:javafx-web:${javafxVersion}:${platformModifier}",
-            //"org.openjfx:javafx-media:${javafxVersion}:${platformModifier}",
-    )
+    implementation project(':appUI')
+    implementation project(':core')
 }
 
-//tasks.named('test') {
-//    // Use JUnit Platform for unit tests.
-//    useJUnitPlatform()
-//}
+javafx {
+    modules = ['javafx.controls']
+}
 
-// Для корректной работы jfoenix. И да, я знаю что это пиздец.
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'Minecraft Launcher'
+        jvmArgs = ['-Djdk.gtk.version=2']
+    }
+
+    jpackage {
+        jpackageHome = "C:\\Users\\lkapitman\\.jdks\\openjdk-17.0.1"
+        imageOptions = ['--icon', 'src/main/resources/icon.ico']
+        imageOptions += ['--vendor', 'juno']
+        installerName = project.name + '_win_x64'
+        installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+    }
+}
+
 def args = [
-        '--add-modules=javafx.controlsц,javafx.media,javafx.graphics,javafx.fxml,javafx.web,javafx.base',
         "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
         "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
         "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
@@ -100,45 +83,3 @@ def args = [
 run {
     jvmArgs = args
 }
-
-// 2nd approach
-tasks.withType(Javadoc) {
-    options.encoding = 'UTF-8'
-}
-
-// runtime {
-//     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-
-// // Uncomment and adjust the code below if you want to generate images for multiple platforms.
-// // (You need to also uncomment the line 'targetPlatformName = ...' in the jpackage block.)
-
-//     targetPlatform("lin") {
-//         jdkHome = "V:\\Workspace\\Java\\Minecraft\\SCO-Launcher\\Launcher\\app\\JDKBuild\\linux"
-//     }
-
-//     targetPlatform("win") {
-//         jdkHome = "C:\\Program Files\\AdoptOpenJDK\\jdk-15.0.2.7-hotspot"
-//     }
-
-//     launcher {
-//         noConsole = true
-//     }
-//     jpackage {
-//         // Uncomment and adjust the following line if your runtime task is configured to generate images for multiple platforms
-//         targetPlatformName = "win"
-
-//         def currentOs = org.gradle.internal.os.OperatingSystem.current()
-//         def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
-//         imageOptions += ['--icon', "src/main/resources/icons/icon.$imgType"]
-//         installerOptions += ['--resource-dir', "src/main/resources"]
-//         installerOptions += ['--vendor', 'OCS Corporation']
-
-//         if(currentOs.windows) {
-//             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-//         }
-//         else if (currentOs.linux) {
-//             installerOptions += ['--linux-package-name', 'OCSLauncher','--linux-shortcut']
-//         }
-//     }
-// }
-
